# jikji

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.omx/context/: jikji-project-handoff-20260523.md
docs/: agent-usage.md  hardbench-benchmark.md  hippocamp-benchmark.md  hippocamp-rerun-report.json  hippocamp-rerun-report.md  jikji-benchmarks.html  local-agent-search-standard.md  media-benchmark.md  public-benchmark-catalog.md  publicdata-agent-benchmark.md  schema.md
skills/jikji/: SKILL.md
src/jikji/: __main__.py  agent_brief.py  agent_index.py  config.py  discover.py  eval.py  hardbench.py  hermes_bench.py  hippocamp.py  scanner.py  search_index.py
src/jikji/parsers/: archive.py  media.py  office.py  pdf.py  registry.py  text.py
tests/: test_holdout_eval.py  test_jikji_prepare.py
